@startuml
' Modèle de Domaine BrokerX
skinparam style strictuml
skinparam backgroundcolor #FFFFFF
skinparam defaultfontname xkcd Script
scale 1
hide empty members

class User {
  id: Long
  email: String
  password: String
  name: String
  address: String
  birthDate: Date
  status: String
}

class Wallet {
  id: Long
  balance: Double
  status: String
}

class Transaction {
  id: Long
  amount: Double
  type: String
  status: String
  description: String
}

class Order {
  id: Long
  symbol: String
  side: String
  type: String
  quantity: Integer
  price: Double
  duration: String
  timestamp: DateTime
  status: String
  rejectReason: String
}

class Stock {
  symbol: String
  name: String
  price: Double
  active: Boolean
  tickSize: Double
  priceRangePercentage: Double
}

' Relations
User "1" -- "1" Wallet : possède >
User "1" -- "*" Transaction : effectue >
User "1" -- "*" Order : place >
Order "*" -- "1" Stock : concerne >
Wallet "1" -- "*" Stock : contient >
@enduml
